# pySTAD

./: .gitignore  README.md  compare.py  examples.py  pyproject.toml
stad/: __init__.py  diff_curve.py  lipo.py  optimized.py  util.py  visualize.py
