[tool.poetry]
name = "pystad"
version = "2.0.1"
description = "Dimensionality reduction through Simplified Topological Abstraction of Data"
authors = ["Jan Aerts <jan.aerts@uhasselt.be>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
