[tool.poetry]
name = "pystad"
version = "2.0.1"
description = "Dimensionality reduction through Simplified Topological Abstraction of Data"
authors = ["Jan Aerts <jan.aerts@uhasselt.be>"]
readme= "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
scipy = "^1.4"
scikit-learn = "^0.22.1"
panel = "^0.8.0"
vega = "=2.6.0"
pandas = "^1.0"
python-igraph = "^0.7.1"
ipython = "^7.12"

[tool.poetry.dev-dependencies]
click = "^7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
